--- a/src/CashBatch.Desktop/ExportSettingsWindow.xaml
+++ b/src/CashBatch.Desktop/ExportSettingsWindow.xaml
@@ -1,25 +1,56 @@
 <Window x:Class="CashBatch.Desktop.ExportSettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Export Settings" Height="200" Width="360" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
+        Title="Export Settings" Height="380" Width="420" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
     <Grid Margin="12">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="120" />
+            <ColumnDefinition Width="180" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
         <TextBlock Text="Fiscal Year:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,8,8" />
-        <TextBox Grid.Row="0" Grid.Column="1" Margin="0,0,0,8" Width="120" HorizontalAlignment="Left" Text="{Binding FiscalYear, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBox Grid.Row="0" Grid.Column="1" Margin="0,0,0,8" Width="160" HorizontalAlignment="Left" Text="{Binding FiscalYear, UpdateSourceTrigger=PropertyChanged}" />
 
         <TextBlock Text="Period:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,8,8" />
-        <TextBox Grid.Row="1" Grid.Column="1" Margin="0,0,0,8" Width="120" HorizontalAlignment="Left" Text="{Binding Period, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBox Grid.Row="1" Grid.Column="1" Margin="0,0,0,8" Width="160" HorizontalAlignment="Left" Text="{Binding Period, UpdateSourceTrigger=PropertyChanged}" />
 
-        <StackPanel Grid.Row="2" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
+        <TextBlock Text="Bank Number:" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,8,8" />
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="0,0,0,8" Width="200" HorizontalAlignment="Left" Text="{Binding BankNumber, UpdateSourceTrigger=PropertyChanged}" />
+
+        <TextBlock Text="GL Bank Account Number:" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,8,8" />
+        <TextBox Grid.Row="3" Grid.Column="1" Margin="0,0,0,8" Width="200" HorizontalAlignment="Left" Text="{Binding GLBankAccountNumber, UpdateSourceTrigger=PropertyChanged}" />
+
+        <TextBlock Text="AR Account Number:" Grid.Row="4" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,8,8" />
+        <TextBox Grid.Row="4" Grid.Column="1" Margin="0,0,0,8" Width="200" HorizontalAlignment="Left" Text="{Binding ARAccountNumber, UpdateSourceTrigger=PropertyChanged}" />
+
+        <TextBlock Text="Terms Account Number:" Grid.Row="5" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,8,8" />
+        <TextBox Grid.Row="5" Grid.Column="1" Margin="0,0,0,8" Width="200" HorizontalAlignment="Left" Text="{Binding TermsAccountNumber, UpdateSourceTrigger=PropertyChanged}" />
+
+        <TextBlock Text="Allowed Account Number:" Grid.Row="6" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,8,8" />
+        <TextBox Grid.Row="6" Grid.Column="1" Margin="0,0,0,8" Width="200" HorizontalAlignment="Left" Text="{Binding AllowedAccountNumber, UpdateSourceTrigger=PropertyChanged}" />
+
+        <TextBlock Text="Export Directory:" Grid.Row="7" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,8,8" />
+        <Grid Grid.Row="7" Grid.Column="1" Margin="0,0,0,8">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <TextBox Grid.Column="0" Margin="0,0,8,0" Text="{Binding ExportDirectory, UpdateSourceTrigger=PropertyChanged}" />
+            <Button Grid.Column="1" Content="Browse..." Width="80" Click="BrowseExportDir_Click" />
+        </Grid>
+
+        <StackPanel Grid.Row="8" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Width="80" Margin="0,8,8,0" IsDefault="True" Content="OK" Click="Ok_Click" />
             <Button Width="80" Margin="0,8,0,0" IsCancel="True" Content="Cancel" />
         </StackPanel>
