--- a/src/CashBatch.Desktop/ImportBankFileWindow.xaml
+++ b/src/CashBatch.Desktop/ImportBankFileWindow.xaml
@@ -6,6 +6,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -14,14 +15,23 @@
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
 
-        <TextBlock Grid.Row="0" Grid.Column="0" Margin="0,0,8,8" VerticalAlignment="Center" Text="Deposit Number:"/>
-        <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,0,0,8" Text="{Binding DepositNumber, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBlock Grid.Row="0" Grid.Column="0" Margin="0,0,8,8" VerticalAlignment="Center" Text="Batch Name:"/>
+        <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,0,0,8" Text="{Binding BatchName, UpdateSourceTrigger=PropertyChanged}"/>
 
-        <TextBlock Grid.Row="1" Grid.Column="0" Margin="0,0,8,8" VerticalAlignment="Center" Text="Bank File:"/>
-        <TextBox Grid.Row="1" Grid.Column="1" Margin="0,0,8,8" IsReadOnly="True" Text="{Binding FilePath}"/>
-        <Button Grid.Row="1" Grid.Column="2" Margin="0,0,0,8" Width="90" Content="Browse..." Click="OnBrowse"/>
+        <TextBlock Grid.Row="1" Grid.Column="0" Margin="0,0,8,8" VerticalAlignment="Center" Text="Template:"/>
+        <ComboBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,0,0,8"
+                  ItemsSource="{Binding Templates}"
+                  SelectedValuePath="TemplateId"
+                  DisplayMemberPath="Name"
+                  SelectedValue="{Binding SelectedTemplateId}"
+                  SelectedIndex="-1"
+                  IsEditable="False"/>
 
-        <StackPanel Grid.Row="2" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right">
+        <TextBlock Grid.Row="2" Grid.Column="0" Margin="0,0,8,8" VerticalAlignment="Center" Text="Bank File:"/>
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="0,0,8,8" IsReadOnly="True" Text="{Binding FilePath}"/>
+        <Button Grid.Row="2" Grid.Column="2" Margin="0,0,0,8" Width="90" Content="Browse..." Click="OnBrowse"/>
+
+        <StackPanel Grid.Row="3" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Width="90" Margin="0,8,8,0" Content="Import" IsDefault="True" Click="OnOk"/>
             <Button Width="90" Margin="0,8,0,0" Content="Cancel" IsCancel="True"/>
         </StackPanel>
